crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__query__query_rank_on_empty_store.snap
---
source: crates/engram-cli/tests/cli/snapshot/query.rs
expression: "f.run(&[\"query\", \"--mode\", \"rank\", \"-p\", \"src/main.rs\"])"
---
$ engramdb --no-maintenance --dir [PROJECT] query --mode rank -p src/main.rs
exit: 0
--- stdout ---
{
  "memories": [],
  "total": 0
}
--- stderr ---
